[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/battle_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/123.tres" type="StyleBox" id=3]
[ext_resource path="res://script/Battle_3.gd" type="Script" id=4]
[ext_resource path="res://Pic/circle.png" type="Texture" id=6]
[ext_resource path="res://Pic/close (1).png" type="Texture" id=7]
[ext_resource path="res://Pic/time1.png" type="Texture" id=9]
[ext_resource path="res://Pic/time2.png" type="Texture" id=10]
[ext_resource path="res://Pic/time3.png" type="Texture" id=11]
[ext_resource path="res://Pic/battle.png" type="Texture" id=12]
[ext_resource path="res://Pic/score.png" type="Texture" id=13]
[ext_resource path="res://Pic/x.png" type="Texture" id=14]
[ext_resource path="res://Pic/v.png" type="Texture" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.921569, 0.92549, 1, 0.513726 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_right = 50
corner_radius_bottom_right = 50

[sub_resource type="DynamicFont" id=3]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 60
outline_size = 3
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 1
outline_color = Color( 1, 1, 1, 0.627451 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.584314, 0.584314, 0.584314, 0.615686 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.866667 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=12]
size = 70
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Node2D3" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 12 )
expand = true

[node name="Panel" type="Panel" parent="Background"]
margin_top = -1.0
margin_right = 1920.0
margin_bottom = 1079.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="Panel" parent="Background"]
margin_top = 30.0
margin_right = 450.0
margin_bottom = 220.0
custom_styles/panel = SubResource( 2 )

[node name="pic" type="TextureRect" parent="Background/Player"]
margin_left = 40.0
margin_top = 30.0
margin_right = 200.0
margin_bottom = 170.0
expand = true

[node name="name" type="Label" parent="Background/Player"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -36.5
margin_right = -58.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[node name="correct" type="TextureRect" parent="Background/Player"]
visible = false
margin_left = 393.0
margin_top = 130.0
margin_right = 473.0
margin_bottom = 210.0
texture = ExtResource( 15 )
expand = true

[node name="incorrect" type="TextureRect" parent="Background/Player"]
visible = false
margin_left = 393.0
margin_top = 130.0
margin_right = 473.0
margin_bottom = 210.0
texture = ExtResource( 14 )
expand = true

[node name="opponent" type="Panel" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -510.0
margin_bottom = -320.0
custom_styles/panel = SubResource( 4 )

[node name="pic" type="TextureRect" parent="Background/opponent"]
margin_left = 253.0
margin_top = 30.0
margin_right = 413.0
margin_bottom = 170.0

[node name="name" type="Label" parent="Background/opponent"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 53.0
margin_top = -36.5
margin_right = 203.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[node name="correct" type="TextureRect" parent="Background/opponent"]
visible = false
margin_left = -26.0
margin_top = 130.0
margin_right = 54.0
margin_bottom = 210.0
texture = ExtResource( 15 )
expand = true

[node name="incorrect" type="TextureRect" parent="Background/opponent"]
visible = false
margin_left = -26.0
margin_top = 130.0
margin_right = 54.0
margin_bottom = 210.0
texture = ExtResource( 14 )
expand = true

[node name="Topic" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -712.0
margin_top = -315.5
margin_right = 712.0
margin_bottom = -132.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
autowrap = true

[node name="Timer" type="Timer" parent="Background"]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="TextureProgress" type="TextureProgress" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = 41.0
margin_right = 90.0
margin_bottom = 221.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
fill_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="countdown_label" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.0
margin_top = 65.0
margin_right = 195.0
margin_bottom = 184.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="op_Options1" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 393.0
margin_right = 1363.0
margin_bottom = 533.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
clip_text = true
icon_align = 1

[node name="content" type="Label" parent="Background/op_Options1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="oppo_correct" type="TextureRect" parent="Background/op_Options1"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/op_Options1"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="op_Options2" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 561.0
margin_right = 1363.0
margin_bottom = 701.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="content" type="Label" parent="Background/op_Options2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="oppo_correct" type="TextureRect" parent="Background/op_Options2"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/op_Options2"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="op_Options3" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 730.0
margin_right = 1363.0
margin_bottom = 870.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="content" type="Label" parent="Background/op_Options3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="oppo_correct" type="TextureRect" parent="Background/op_Options3"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/op_Options3"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="op_Options4" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 898.0
margin_right = 1363.0
margin_bottom = 1038.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="content" type="Label" parent="Background/op_Options4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="oppo_correct" type="TextureRect" parent="Background/op_Options4"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="oppo_incorrect" type="TextureRect" parent="Background/op_Options4"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 713.0
margin_top = -35.0
margin_right = 783.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="player_score" type="Label" parent="Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 278.0
margin_top = -562.0
margin_right = 380.0
margin_bottom = -57.0
custom_styles/normal = SubResource( 10 )

[node name="total" type="Label" parent="Background/player_score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -236.5
margin_right = 37.5
margin_bottom = 236.5
custom_styles/normal = SubResource( 11 )

[node name="score2" type="TextureProgress" parent="Background/player_score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -225.0
margin_right = 27.5
margin_bottom = 225.0
texture_progress = ExtResource( 13 )
fill_mode = 3

[node name="word" type="Label" parent="Background/player_score"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_top = -124.0
margin_right = 55.0
margin_bottom = -21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Background/player_score"]

[node name="oppo_score" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -372.0
margin_top = -22.0
margin_right = -270.0
margin_bottom = 483.0
custom_styles/normal = SubResource( 10 )

[node name="total" type="Label" parent="Background/oppo_score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -236.5
margin_right = 37.5
margin_bottom = 236.5
custom_styles/normal = SubResource( 11 )

[node name="score" type="TextureProgress" parent="Background/oppo_score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -225.0
margin_right = 27.5
margin_bottom = 225.0
texture_progress = ExtResource( 13 )
fill_mode = 3

[node name="word" type="Label" parent="Background/oppo_score"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_top = -124.0
margin_right = 55.0
margin_bottom = -21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Background/oppo_score"]

[node name="Options1" type="Button" parent="Background"]
margin_left = 545.0
margin_top = 393.0
margin_right = 1365.0
margin_bottom = 533.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
clip_text = true
icon_align = 1

[node name="content" type="Label" parent="Background/Options1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="player_correct" type="TextureRect" parent="Background/Options1"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options1"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="Options2" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 561.0
margin_right = 1363.0
margin_bottom = 701.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="content" type="Label" parent="Background/Options2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="player_correct" type="TextureRect" parent="Background/Options2"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options2"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="Options3" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 730.0
margin_right = 1363.0
margin_bottom = 870.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="content" type="Label" parent="Background/Options3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="player_correct" type="TextureRect" parent="Background/Options3"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options3"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="Options4" type="Button" parent="Background"]
margin_left = 543.0
margin_top = 898.0
margin_right = 1363.0
margin_bottom = 1038.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="content" type="Label" parent="Background/Options4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -70.0
margin_right = 280.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="player_correct" type="TextureRect" parent="Background/Options4"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="player_incorrect" type="TextureRect" parent="Background/Options4"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -783.0
margin_top = -35.0
margin_right = -713.0
margin_bottom = 35.0
texture = ExtResource( 7 )
expand = true

[node name="Timer2" type="Timer" parent="Background"]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="HTTPRequest4" type="HTTPRequest" parent="."]

[node name="HTTPRequest5" type="HTTPRequest" parent="."]

[node name="HTTPRequest6" type="HTTPRequest" parent="."]

[connection signal="timeout" from="Background/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Background/op_Options1" to="." method="_on_op_Options1_pressed"]
[connection signal="pressed" from="Background/op_Options2" to="." method="_on_op_Options2_pressed"]
[connection signal="pressed" from="Background/op_Options3" to="." method="_on_op_Options3_pressed"]
[connection signal="pressed" from="Background/op_Options4" to="." method="_on_op_Options4_pressed"]
[connection signal="pressed" from="Background/Options1" to="." method="_on_Options1_pressed"]
[connection signal="pressed" from="Background/Options2" to="." method="_on_Options2_pressed"]
[connection signal="pressed" from="Background/Options3" to="." method="_on_Options3_pressed"]
[connection signal="pressed" from="Background/Options4" to="." method="_on_Options4_pressed"]
[connection signal="timeout" from="Background/Timer2" to="." method="_on_delay_timeout"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
[connection signal="request_completed" from="HTTPRequest3" to="." method="_on_HTTPRequest3_request_completed"]
[connection signal="request_completed" from="HTTPRequest4" to="." method="_on_HTTPRequest4_request_completed"]
[connection signal="request_completed" from="HTTPRequest5" to="." method="_on_HTTPRequest5_request_completed"]
[connection signal="request_completed" from="HTTPRequest6" to="." method="_on_HTTPRequest6_request_completed"]
